Add probability that a airfield or port sweep will successfully intercept the target's CAP.